Bug 510312 - Replace usage of new Integer(int) with Integer.valueOf() in eclipse.platform.text plug-ins - Part 1
Change-Id: I8cd43f97a0e3d4ea32e11a2b3cf8898b6be3bc5c
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>