@@ -98,7 +98,7 @@ public class GotoLineTest {
 				ITextEditor editor= (ITextEditor) part;
 				IAction action= editor.getAction(ITextEditorActionConstants.GOTO_LINE);
 				Accessor accessor= new Accessor(action, GotoLineAction.class);
-				accessor.invoke("gotoLine", new Class[] {int.class}, new Integer[] {new Integer(line)});
+				accessor.invoke("gotoLine", new Class[] {int.class}, new Integer[] {Integer.valueOf(line)});
 				Control control= part.getAdapter(Control.class);
 				if (control instanceof StyledText) {
 					int caretLine= -1;
